--- a/pom.xml
+++ b/pom.xml
@@ -29,12 +29,13 @@
                     <executable>true</executable>
                 </configuration>
             </plugin>
-            <plugin>
+            <!--<plugin>
                 <groupId>com.heroku.sdk</groupId>
                 <artifactId>heroku-maven-plugin</artifactId>
                 <version>3.0.4</version>
-            </plugin>
+            </plugin>-->
         </plugins>
+        <finalName>conference-demo-docker</finalName>
     </build>
 
     <dependencies>
